# fitness-tools

./: README.md  pyproject.toml
data/: .gitignore
fitness_tools/: mywellness2tcx_pandas.py  strava_upload.py
